Avancement dans la correction d'erreurs sur le constructeur Niveau + rajout du super dans les filles objets plateau